--- a/Kolokwium2/Kolokwium2/Kolokwium2.csproj
+++ b/Kolokwium2/Kolokwium2/Kolokwium2.csproj
@@ -17,11 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers\" />
-      <Folder Include="DTOs\" />
-      <Folder Include="Exceptions\" />
-      <Folder Include="Models\" />
-      <Folder Include="Services\" />
+      <Folder Include="Data\" />
     </ItemGroup>
 
 </Project>
